--- a/alacritty.yml
+++ b/alacritty.yml
@@ -109,10 +109,10 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Input Mono
+    family: Tamsyn10x20
 
     # The `style` can be specified to pick a specific face.
-    style: Light
+    style: Regular
 
   # Bold font face
   bold:
@@ -120,10 +120,10 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Input Mono
+    family: Tamsyn10x20
 
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Bold
 
   # Italic font face
   italic:
@@ -131,10 +131,10 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Input Mono
+    family: Tamsyn10x20
 
     # The `style` can be specified to pick a specific face.
-    style: Light Italic
+    style: Regular
 
   # Bold italic font face
   bold_italic: 
@@ -142,13 +142,13 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Input Mono
+    family: Tamsyn10x20
 
     # The `style` can be specified to pick a specific face.
-    style: Italic
+    style: Bold
 
   # Point size
-  size: 16.0
+  size: 20.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -184,37 +184,95 @@ font:
 
 # Antares
 colors:
-  # Default colors
-  primary:
-    background: '0x151515'
-    foreground: '0xEBEBEB'
-
-  # Cursor colors
-  cursor:
-    text: '0x000000'
-    cursor: '0xEBE971'
+  selection:
+    text:       '0xFAFAFA'
+    background: '0x252834'
 
   # Normal colors
+  primary:
+    background: '0x000000'
+    foreground: '0xFAFAFA'
   normal:
-    black:   '0x0d0d0d'
-    red:     '0xDE575C'
-    green:   '0x00b853'
-    yellow:  '0xEBE971'
-    blue:    '0x7fc6f0'
-    magenta: '0xcf9ffa'
-    cyan:    '0x90d0f0'
-    white:   '0xBBBBBB'
+    black:   '0x282C34'
+    red:     '0xFF6059'
+    green:   '0x5FFF87'
+    yellow:  '0xFFFF87'
+    blue:    '0x5FAFFF'
+    magenta: '0xAF87FF'
+    cyan:    '0x5FAFFF'
+    white:   '0xFAFAFA'
 
   # Bright colors
   bright:
-    black:   '0x6D7070'
-    red:     '0xFF4352'
-    green:   '0xB8E466'
-    yellow:  '0xFFD750'
-    blue:    '0x1BA6FA'
-    magenta: '0xA578EA'
-    cyan:    '0x73FBF1'
-    white:   '0xFEFEF8'
+    black:   '0x282C34'
+    red:     '0xFF6059'
+    green:   '0x5FFF87'
+    yellow:  '0xFFFF87'
+    blue:    '0x5FAFFF'
+    magenta: '0xAF87FF'
+    cyan:    '0x5FAFFF'
+    white:   '0xFAFAFA'
+#colors:
+#selection:
+#  text:       '0xFAFAFA'
+#  background: '0x252834'
+#
+## Normal colors
+#primary:
+#  background: '0x313440'
+#  foreground: '0xFAFAFA'
+#normal:
+#  black:   '0x282C34'
+#  red:     '0xFF6059'
+#  green:   '0x5FFF87'
+#  yellow:  '0xFFFF87'
+#  blue:    '0x5FAFFF'
+#  magenta: '0xAF87FF'
+#  cyan:    '0x5FAFFF'
+#  white:   '0xFAFAFA'
+#
+## Bright colors
+#bright:
+#  black:   '0x282C34'
+#  red:     '0xFF6059'
+#  green:   '0x5FFF87'
+#  yellow:  '0xFFFF87'
+#  blue:    '0x5FAFFF'
+#  magenta: '0xAF87FF'
+#  cyan:    '0x5FAFFF'
+#  white:   '0xFAFAFA'
+#
+#  # Default colors
+#  primary:
+#    background: '0x151515'
+#    foreground: '0xEBEBEB'
+#
+#  # Cursor colors
+#  cursor:
+#    text: '0x000000'
+#    cursor: '0xEBE971'
+#
+#  # Normal colors
+#  normal:
+#    black:   '0x0d0d0d'
+#    red:     '0xDE575C'
+#    green:   '0x00b853'
+#    yellow:  '0xEBE971'
+#    blue:    '0x7fc6f0'
+#    magenta: '0xcf9ffa'
+#    cyan:    '0x90d0f0'
+#    white:   '0xBBBBBB'
+#
+#  # Bright colors
+#  bright:
+#    black:   '0x6D7070'
+#    red:     '0xFF4352'
+#    green:   '0xB8E466'
+#    yellow:  '0xFFD750'
+#    blue:    '0x1BA6FA'
+#    magenta: '0xA578EA'
+#    cyan:    '0x73FBF1'
+#    white:   '0xFEFEF8'
 
   # Dim colors
   #
