--- a/alacritty.yml
+++ b/alacritty.yml
@@ -109,10 +109,10 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Tamsyn10x20
+    family: Input Mono
 
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Thin
 
   # Bold font face
   bold:
@@ -120,10 +120,10 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Tamsyn10x20
+    family: Input Mono
 
     # The `style` can be specified to pick a specific face.
-    style: Bold
+    style: Medium
 
   # Italic font face
   italic:
@@ -131,10 +131,10 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Tamsyn10x20
+    family: Input Mono
 
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Thin Italic
 
   # Bold italic font face
   bold_italic: 
@@ -142,13 +142,13 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Tamsyn10x20
+    family: Input Mono
 
     # The `style` can be specified to pick a specific face.
-    style: Bold
+    style: Medium Italic
 
   # Point size
-  size: 20.0
+  size: 15.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
